changed image sources

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <body>
   <main class="container">
     <header>
-      <img class="meet-logo" src="./assets/logo.svg" alt="">
+      <img class="meet-logo" src="starter-code/assets/logo.svg" alt="">
     </header>
 
     <section class="hero">
       <div class="hero-container">
 
 
-        <img class="hero-tablet" src="./assets/tablet/image-hero.png" alt="">
+        <img class="hero-tablet" src="starter-code/assets/tablet/image-hero.png" alt="">
 
-        <img class="hero-left" src="./assets/desktop/image-hero-left.png" alt="">
+        <img class="hero-left" src="starter-code/assets/desktop/image-hero-left.png" alt="">
 
         <div class="text-content">
           <h1 class="title">Group Chat for Everyone</h1>
@@ -36,7 +36,7 @@
           </div>
         </div>
 
-        <img class="hero-right" src="./assets/desktop/image-hero-right.png" alt="">
+        <img class="hero-right" src="starter-code/assets/desktop/image-hero-right.png" alt="">
       </div>
     </section>
 
@@ -49,10 +49,10 @@
         </div>
 
         <div class="image-collage">
-          <img src="assets/desktop/image-woman-in-videocall.jpg" alt="">
-          <img src="assets/desktop/image-women-videochatting.jpg" alt="">
-          <img src="assets/desktop/image-men-in-meeting.jpg" alt="">
-          <img src="assets/desktop/image-man-texting.jpg" alt="">
+          <img src="starter-code/assets/desktop/image-woman-in-videocall.jpg" alt="">
+          <img src="starter-code/assets/desktop/image-women-videochatting.jpg" alt="">
+          <img src="starter-code/assets/desktop/image-men-in-meeting.jpg" alt="">
+          <img src="starter-code/assets/desktop/image-man-texting.jpg" alt="">
         </div>
 
         <div class="content-text">
@@ -70,17 +70,8 @@
     </section>
 
     <footer class="footer">
-      <!--
-      <picture class="footer-image">
-        <source media="(min-width: 1023px)" srcset="assets/desktop/image-footer.jpg">
-        <source media="(min-width: 769px)" srcset="assets/tablet/image-footer.jpg">
-        <source media="(min-width: 376px)" srcset="assets/mobile/image-footer.jpg">
-        <img src="assets/desktop/image-footer.jpg" alt="">
-      </picture>
-    -->
+      <img class="footer-image" src="starter-code/assets/desktop/image-footer.jpg" alt="">
 
-      <img class="footer-image" src="assets/desktop/image-footer.jpg" alt="">
-    
       <div class="number-container">
         <div class="line"></div>
         <span class="number">02</span>
