changed aria labels

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             across any device.</h2>
 
           <div class="button-gap">
-            <button class="btn button-cyan" aria-label="Download version 1.3 of the app">Download<span> v1.3</span></button>
+            <button class="btn button-cyan" aria-label="Download version 1.3 of the app from hero section">Download<span> v1.3</span></button>
             <button class="btn button-purple" aria-label="Learn more about the product">What is it?</button>
           </div>
         </div>
@@ -82,7 +82,7 @@
         <h6 class="footer-description">Stay connected with reliable HD meetings <br> and unlimited one-on-one and group
           video <br> sessions.</h6>
 
-        <button class="btn button-purple" aria-label="Download version 1.3 of the app">Download <span> v1.3</span></button>
+        <button class="btn button-purple" aria-label="Download version 1.3 of the app from footer">Download <span> v1.3</span></button>
       </div>
     </footer>
   </main>
